Fix z-index of drop down menu to be more than the zoom panel

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -12,9 +12,6 @@ header {
 
   .dropdown-menu {
     font-size: 150%;
-    ul {
-      position: relative;
-      z-index: 1200;
-    }
+    z-index: 1100;
   }
 }
